# pdm-pipeline-sceleton

./: README.md  pipeline.yaml
.github/workflows/: ci.yaml
pipeline/: .artifactory-ca.pem  .gitignore  pdm.toml  pipeline.py  pyproject.toml
pipeline/__pypackages__/3.8/lib/: pipeline.pth
pipeline/__pypackages__/3.8/lib/PyYAML-6.0.1.dist-info/: RECORD
pipeline/__pypackages__/3.8/lib/charset_normalizer-3.3.2.dist-info/: RECORD
pipeline/__pypackages__/3.8/lib/jproperties-2.1.1.dist-info/: RECORD
pipeline/__pypackages__/3.8/lib/pipeline-0.1.0.dist-info/: METADATA  RECORD  direct_url.json
pipeline/src/utils/: __init__.py  cmd_executor.py
