[project]
name = "pipeline"
version = "1.0.1"
description = "python pipeline"
authors = [
    {name = "kostakoff", email = "kostakoff@local"},
]
dependencies = [
    "requests>=2.27.1",
    "PyYAML>=6.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "GPL"}

[build-system]
requires = ["pdm-pep517>=0.10.2"]
build-backend = "pdm.pep517.api"

[project.optional-dependencies]

[tool.pdm]
distribution = true
